--- a/Cursos/Bases/3. Exercise 1 Position/CSS/Index.css
+++ b/Cursos/Bases/3. Exercise 1 Position/CSS/Index.css
@@ -69,3 +69,84 @@
   justify-content: center;
   align-items: center;
 }
+
+.main-group {
+  display: flex;
+}
+.main-group > section {
+  flex-basis: 70%;
+}
+
+.main-group .aside {
+  flex: 1;
+  border: 1px solid #333;
+  max-height: 600px;
+  /* background-color: red; */
+  overflow-y: auto;
+}
+
+.main-group .aside h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 22px;
+  border: 1px solid #333;
+}
+
+.main-group .aside p {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  color: #333;
+}
+
+.page-container footer {
+  background-color: #ccc;
+  padding: 10px;
+
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 18px;
+  color: #333;
+  text-align: center;
+}
+
+.fixed-box {
+  border: 1px solid #000;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  background-color: #181879;
+  font-size: 18px;
+  color: #fff;
+  position: fixed;
+  top: 50%;
+  /* left: 50%; */
+  right: 0;
+}
+
+.absolute-box {
+  background-color: #19a519;
+  border: 1px solid #000;
+  width: 80px;
+  height: 80px;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 18px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  z-index: 2;
+}
+
+.absolute-box-2 {
+  background-color: #ff3333;
+  border: 1px solid #000;
+  width: 80px;
+  height: 80px;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 18px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  position: absolute;
+  top: 26%;
+  left: 26%;
+  z-index: 1;
+}
